--- a/app.json
+++ b/app.json
@@ -1,4 +1,4 @@
 {
-  "name": "ContentstackReactNative",
-  "displayName": "ContentstackReactNative"
+  "name": "GuruQ",
+  "displayName": "GuruQ"
 }
