--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ContentstackReactNative",
+  "name": "GuruQ",
   "version": "0.0.1",
   "private": true,
   "scripts": {
@@ -7,7 +7,9 @@
     "ios": "react-native run-ios",
     "start": "react-native start",
     "test": "jest",
-    "lint": "eslint ."
+    "lint": "eslint .",
+    "clean:android": "cd android && ./gradlew clean && cd ../",
+    "clean:ios": "cd ios && xcodebuild clean && cd ../"
   },
   "dependencies": {
     "@apollo/client": "^3.0.2",
