--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "@apollo/client": "^3.0.2",
+    "@apollo/react-hooks": "^4.0.0",
     "apollo-client": "^2.6.10",
     "graphql": "^15.3.0",
     "react": "16.13.1",
