--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "react-native-gridview": "^0.1.2",
     "react-native-reanimated": "^1.9.0",
     "react-native-router-flux": "^4.2.0",
-    "react-native-screens": "^2.9.0"
+    "react-native-screens": "^2.9.0",
+    "react-native-splash-screen": "3.0.6"
   },
   "devDependencies": {
     "@babel/core": "^7.10.4",
