--- a/package.json
+++ b/package.json
@@ -14,17 +14,27 @@
   "dependencies": {
     "@apollo/client": "^3.0.2",
     "@apollo/react-hooks": "^4.0.0",
+    "@react-native-community/async-storage": "^1.12.1",
+    "@react-native-community/masked-view": "^0.1.10",
+    "@react-navigation/bottom-tabs": "^5.9.2",
+    "@react-navigation/native": "^5.7.6",
+    "@react-navigation/stack": "^5.9.3",
     "apollo-client": "^2.6.10",
     "graphql": "^15.3.0",
+    "native-base": "^2.13.14",
     "react": "16.13.1",
     "react-apollo": "^3.1.5",
     "react-native": "0.63.0",
+    "react-native-device-info": "^6.2.1",
     "react-native-gesture-handler": "^1.6.1",
     "react-native-gridview": "^0.1.2",
+    "react-native-phone-input": "^0.2.4",
     "react-native-reanimated": "^1.9.0",
-    "react-native-router-flux": "^4.2.0",
+    "react-native-safe-area-context": "^3.1.8",
     "react-native-screens": "^2.9.0",
-    "react-native-splash-screen": "3.0.6"
+    "react-native-splash-screen": "3.0.6",
+    "react-native-swiper": "^1.6.0",
+    "react-navigation": "^4.4.2"
   },
   "devDependencies": {
     "@babel/core": "^7.10.4",
@@ -38,5 +48,10 @@
   },
   "jest": {
     "preset": "react-native"
+  },
+  "rnpm": {
+    "assets": [
+      "./src/assets/fonts/"
+    ]
   }
 }
