--- a/package.json
+++ b/package.json
@@ -21,7 +21,10 @@
     "@react-navigation/stack": "^5.9.3",
     "@twotalltotems/react-native-otp-input": "^1.3.11",
     "apollo-client": "^2.6.10",
+    "apollo-link-logger": "^2.0.0",
+    "apollo-logger": "^0.3.3",
     "graphql": "^15.3.0",
+    "iterall": "^1.3.0",
     "native-base": "^2.13.14",
     "react": "16.13.1",
     "react-apollo": "^3.1.5",
