--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "apollo-logger": "^0.3.3",
     "graphql": "^15.3.0",
     "iterall": "^1.3.0",
+    "lottie-react-native": "^3.5.0",
     "native-base": "^2.13.14",
     "react": "16.13.1",
     "react-apollo": "^3.1.5",
