--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react": "16.13.1",
     "react-apollo": "^3.1.5",
     "react-native": "0.63.0",
+    "react-native-debugger": "^1.1.0",
     "react-native-device-info": "^6.2.1",
     "react-native-gesture-handler": "^1.6.1",
     "react-native-gridview": "^0.1.2",
