--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "test": "jest",
     "lint": "eslint *.js **/*.js",
     "clean:android": "cd android && ./gradlew clean && cd ../",
-    "clean:ios": "cd ios && xcodebuild clean && cd ../"
+    "clean:ios": "cd ios && xcodebuild clean && cd ../",
   },
   "dependencies": {
     "@apollo/client": "^3.0.2",
@@ -31,7 +31,7 @@
     "native-base": "^2.13.14",
     "react": "16.13.1",
     "react-apollo": "^3.1.5",
-    "react-native": "0.63.0",
+    "react-native": "0.63.3",
     "react-native-debugger": "^1.1.0",
     "react-native-device-info": "^6.2.1",
     "react-native-gesture-handler": "^1.6.1",
@@ -52,11 +52,16 @@
     "babel-jest": "^26.1.0",
     "eslint": "^7.11.0",
     "eslint-config-airbnb": "^18.2.0",
+    "eslint-config-prettier": "^6.14.0",
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-jsx-a11y": "^6.3.1",
+    "eslint-plugin-prettier": "^3.1.4",
     "eslint-plugin-react": "^7.21.5",
+    "husky": "0.14.3",
     "jest": "^26.1.0",
+    "lint-staged": "^10.4.2",
     "metro-react-native-babel-preset": "^0.60.0",
+    "prettier": "^2.1.2",
     "react-test-renderer": "16.13.1"
   },
   "jest": {
