--- a/package.json
+++ b/package.json
@@ -9,13 +9,7 @@
     "test": "jest",
     "lint": "eslint *.js **/*.js",
     "clean:android": "cd android && ./gradlew clean && cd ../",
-    "clean:ios": "cd ios && xcodebuild clean && cd ../",
-    "precommit": "lint-staged"
-  },
-  "lint-staged": {
-    "*.{js,jsx}": [
-      "eslint --fix"
-    ]
+    "clean:ios": "cd ios && xcodebuild clean && cd ../"
   },
   "dependencies": {
     "@apollo/client": "^3.0.2",
@@ -35,6 +29,7 @@
     "lodash": "^4.17.20",
     "lottie-react-native": "^3.5.0",
     "native-base": "^2.13.14",
+    "prop-types": "^15.7.2",
     "react": "16.13.1",
     "react-apollo": "^3.1.5",
     "react-native": "0.63.3",
