--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react-native-debugger": "^1.1.0",
     "react-native-device-info": "^6.2.1",
     "react-native-gesture-handler": "^1.6.1",
+    "react-native-global-font": "^1.0.2",
     "react-native-gridview": "^0.1.2",
     "react-native-reanimated": "^1.9.0",
     "react-native-safe-area-context": "^3.1.8",
