--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@apollo/react-hooks": "^4.0.0",
     "@react-native-community/async-storage": "^1.12.1",
     "@react-native-community/masked-view": "^0.1.10",
+    "@react-native-community/netinfo": "^5.9.7",
     "@react-navigation/bottom-tabs": "^5.9.2",
     "@react-navigation/native": "^5.7.6",
     "@react-navigation/stack": "^5.9.3",
@@ -30,7 +31,7 @@
     "lottie-react-native": "^3.5.0",
     "native-base": "^2.13.14",
     "prop-types": "^15.7.2",
-    "react": "16.13.1",
+    "react": "16.14.0",
     "react-apollo": "^3.1.5",
     "react-native": "0.63.3",
     "react-native-debugger": "^1.1.0",
