--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "react-native-global-font": "^1.0.2",
     "react-native-gridview": "^0.1.2",
     "react-native-reanimated": "^1.9.0",
+    "react-native-responsive-fontsize": "^0.4.3",
     "react-native-safe-area-context": "^3.1.8",
     "react-native-screens": "^2.9.0",
     "react-native-section-alphabet-list": "^1.0.1",
