--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react": "16.14.0",
     "react-apollo": "^3.1.5",
     "react-native": "0.63.3",
+    "react-native-datepicker": "^1.7.2",
     "react-native-debugger": "^1.1.0",
     "react-native-device-info": "^6.2.1",
     "react-native-gesture-handler": "^1.6.1",
