--- a/ios/GuruQ/Info.plist
+++ b/ios/GuruQ/Info.plist
@@ -37,8 +37,6 @@
 			</dict>
 		</dict>
 	</dict>
-	<key>NSLocationWhenInUseUsageDescription</key>
-	<string/>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIRequiredDeviceCapabilities</key>
@@ -80,5 +78,13 @@
 		<string>SegoeUI-Semibold.ttf</string>
 		<string>SegoeUI-Bold.ttf</string>
 	</array>
+
+	<key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
+    <string>$(PRODUCT_NAME) needs Location access for finding the best tutors near your.</string>
+    <key>NSLocationAlwaysUsageDescription</key>
+    <string>$(PRODUCT_NAME) needs Location access for finding the best tutors near your.</string>
+    <key>NSLocationWhenInUseUsageDescription</key>
+    <string>$(PRODUCT_NAME) needs Location access for finding the best tutors near your.</string>
+
 </dict>
 </plist>
