--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "react": "16.14.0",
     "react-apollo": "^3.1.5",
     "react-native": "0.63.3",
+    "react-native-calendar-strip": "^2.0.9",
     "react-native-datepicker": "^1.7.2",
     "react-native-debugger": "^1.1.0",
     "react-native-device-info": "^6.2.1",
@@ -44,6 +45,7 @@
     "react-native-global-font": "^1.0.2",
     "react-native-gridview": "^0.1.2",
     "react-native-modal-datetime-picker": "^9.0.0",
+    "react-native-progress-circle": "^2.1.0",
     "react-native-reanimated": "^1.9.0",
     "react-native-responsive-fontsize": "^0.4.3",
     "react-native-safe-area-context": "^3.1.8",
