--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "react-apollo": "^3.1.5",
     "react-native": "0.63.3",
     "react-native-calendar-strip": "^2.0.9",
+    "react-native-calendars": "^1.403.0",
     "react-native-datepicker": "^1.7.2",
     "react-native-debugger": "^1.1.0",
     "react-native-device-info": "^6.2.1",
