--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "react": "16.14.0",
     "react-apollo": "^3.1.5",
     "react-native": "0.63.3",
+    "react-native-agora": "^3.1.3",
     "react-native-calendar-strip": "^2.0.9",
     "react-native-calendars": "^1.403.0",
     "react-native-datepicker": "^1.7.2",
