--- a/package.json
+++ b/package.json
@@ -44,8 +44,10 @@
     "react-native-debugger": "^1.1.0",
     "react-native-device-info": "^6.2.1",
     "react-native-gesture-handler": "^1.6.1",
+    "react-native-get-location": "^1.4.3",
     "react-native-global-font": "^1.0.2",
     "react-native-gridview": "^0.1.2",
+    "react-native-maps": "^0.27.1",
     "react-native-modal-datetime-picker": "^9.0.0",
     "react-native-progress-circle": "^2.1.0",
     "react-native-razorpay": "^2.2.1",
