--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "clean:ios": "cd ios && xcodebuild clean && cd ../"
   },
   "dependencies": {
+    "@apollo/client": "^3.2.7",
     "@apollo/react-hooks": "^4.0.0",
     "@react-native-community/async-storage": "^1.12.1",
     "@react-native-community/datetimepicker": "^3.0.4",
@@ -22,11 +23,6 @@
     "@react-navigation/native": "^5.7.6",
     "@react-navigation/stack": "^5.9.3",
     "@twotalltotems/react-native-otp-input": "^1.3.11",
-    "apollo-cache-inmemory": "^1.6.6",
-    "apollo-client": "^2.6.10",
-    "apollo-link-context": "^1.0.20",
-    "apollo-link-error": "^1.1.13",
-    "apollo-link-http": "^1.5.17",
     "apollo-link-logger": "^2.0.0",
     "apollo-logger": "^0.3.3",
     "graphql": "^15.3.0",
