--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "prop-types": "^15.7.2",
     "react": "16.14.0",
     "react-apollo": "^3.1.5",
+    "react-chat-elements": "^10.12.0",
     "react-native": "0.63.3",
     "react-native-agora": "^3.1.3",
     "react-native-calendar-strip": "^2.0.9",
