--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "prop-types": "^15.7.2",
     "react": "16.14.0",
     "react-apollo": "^3.1.5",
-    "react-chat-elements": "^10.12.0",
+    "react-dom": "^17.0.1",
     "react-native": "0.63.3",
     "react-native-agora": "^3.1.3",
     "react-native-calendar-strip": "^2.0.9",
@@ -45,6 +45,7 @@
     "react-native-device-info": "^6.2.1",
     "react-native-gesture-handler": "^1.6.1",
     "react-native-get-location": "^1.4.3",
+    "react-native-gifted-chat": "^0.16.3",
     "react-native-global-font": "^1.0.2",
     "react-native-gridview": "^0.1.2",
     "react-native-maps": "^0.27.1",
