--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@twotalltotems/react-native-otp-input": "^1.3.11",
     "apollo-link-logger": "^2.0.0",
     "apollo-logger": "^0.3.3",
+    "emoji-utils": "^1.0.1",
     "graphql": "^15.3.0",
     "iterall": "^1.3.0",
     "lodash": "^4.17.20",
