--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "react-native-maps": "^0.27.1",
     "react-native-modal-datetime-picker": "^9.0.0",
     "react-native-progress-circle": "^2.1.0",
+    "react-native-ratings": "^7.3.0",
     "react-native-razorpay": "^2.2.1",
     "react-native-reanimated": "^1.9.0",
     "react-native-responsive-fontsize": "^0.4.3",
