--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "react-native-section-alphabet-list": "^1.0.1",
     "react-native-splash-screen": "3.0.6",
     "react-native-swiper": "^1.6.0",
+    "react-native-webview": "^11.0.1",
     "react-navigation": "^4.4.2",
     "subscriptions-transport-ws": "^0.9.18"
   },
