--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "react-native-get-location": "^1.4.3",
     "react-native-gifted-chat": "^0.16.3",
     "react-native-global-font": "^1.0.2",
+    "react-native-google-places-autocomplete": "^2.1.2",
     "react-native-gridview": "^0.1.2",
     "react-native-maps": "^0.27.1",
     "react-native-modal-datetime-picker": "^9.0.0",
