--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "apollo-logger": "^0.3.3",
     "emoji-utils": "^1.0.1",
     "graphql": "^15.3.0",
+    "intl": "^1.2.5",
     "iterall": "^1.3.0",
     "libphonenumber-js": "^1.9.6",
     "lodash": "^4.17.20",
