student page changes

--- a/ios/GuruQ/Info.plist
+++ b/ios/GuruQ/Info.plist
@@ -32,7 +32,7 @@
 		</dict>
 	</array>
 	<key>CFBundleVersion</key>
-	<string>1</string>
+	<string>$(CURRENT_PROJECT_VERSION)</string>
 	<key>LSApplicationQueriesSchemes</key>
 	<array>
 		<string>paytm</string>
@@ -49,14 +49,14 @@
 			<dict>
 				<key>NSExceptionAllowsInsecureHTTPLoads</key>
 				<true/>
-                <key>NSIncludesSubdomains</key>
-                <true/>
+				<key>NSIncludesSubdomains</key>
+				<true/>
 			</dict>
 			<key>localhost</key>
 			<dict>
-                <key>NSExceptionAllowsInsecureHTTPLoads</key>
-                <true/>
-            </dict>
+				<key>NSExceptionAllowsInsecureHTTPLoads</key>
+				<true/>
+			</dict>
 		</dict>
 	</dict>
 	<key>NSCameraUsageDescription</key>
