--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
     "react-native-safe-area-context": "^3.1.8",
     "react-native-screens": "^2.9.0",
     "react-native-section-alphabet-list": "^1.0.1",
+    "react-native-snap-carousel": "^3.9.1",
     "react-native-splash-screen": "3.2.0",
     "react-native-swiper": "^1.6.0",
     "react-native-webview": "^11.0.1",
