--- a/ios/GuruQ/Info.plist
+++ b/ios/GuruQ/Info.plist
@@ -98,6 +98,10 @@
 		<string>SegoeUI-Semibold.ttf</string>
 		<string>SegoeUI-Bold.ttf</string>
 	</array>
+	<key>UIBackgroundModes</key>
+	<array>
+		<string>remote-notification</string>
+	</array>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIRequiredDeviceCapabilities</key>
