--- a/firebase.json
+++ b/firebase.json
@@ -3,7 +3,7 @@
     "crashlytics_auto_collection_enabled": true,
     "crashlytics_ndk_enabled": true,
     "crashlytics_debug_enabled": true,
-    "crashlytics_disable_auto_disabler": false,
+    "crashlytics_disable_auto_disabler": true,
     "messaging_ios_auto_register_for_remote_messages": false,
     "in_app_messaging_auto_collection_enabled": false,
     "messaging_android_notification_channel_id": "high-priority",
