--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@react-native-community/netinfo": "^5.9.7",
     "@react-native-community/picker": "^1.8.1",
     "@react-native-firebase/app": "^10.2.0",
+    "@react-native-firebase/crashlytics": "^10.4.0",
     "@react-native-firebase/messaging": "^10.2.0",
     "@react-navigation/bottom-tabs": "^5.9.2",
     "@react-navigation/native": "^5.7.6",
