--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@react-native-community/masked-view": "^0.1.10",
     "@react-native-community/netinfo": "^5.9.7",
     "@react-native-community/picker": "^1.8.1",
+    "@react-native-firebase/analytics": "^10.4.0",
     "@react-native-firebase/app": "^10.2.0",
     "@react-native-firebase/crashlytics": "^10.4.0",
     "@react-native-firebase/messaging": "^10.2.0",
