--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -160,11 +160,6 @@ android {
             // Caution! In production, you need to generate your own keystore file.
             // see https://reactnative.dev/docs/signed-apk-android.
             signingConfig signingConfigs.debug
-//               firebaseCrashlytics {
-//                 nativeSymbolUploadEnabled true
-//             }
-//             minifyEnabled enableProguardInReleaseBuilds
-//             proguardFiles getDefaultProguardFile("proguard-android.txt"), "proguard-rules.pro"
         }
     }
 
@@ -182,6 +177,10 @@ android {
 
         }
     }
+
+  packagingOptions {
+      pickFirst '**/*.so'
+  }
 }
 
 dependencies {
@@ -219,6 +218,7 @@ task copyDownloadableDepsToLibs(type: Copy) {
     from configurations.compile
     into 'libs'
 }
+
 
 apply plugin: "com.google.gms.google-services"
 apply plugin: 'com.google.firebase.crashlytics'
