--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "react-native-image-crop-picker": "^0.32.2",
     "react-native-maps": "^0.27.1",
     "react-native-modal-datetime-picker": "^9.0.0",
+    "react-native-pdf": "^6.2.2",
     "react-native-progress-circle": "^2.1.0",
     "react-native-ratings": "^7.3.0",
     "react-native-razorpay": "^2.2.1",
@@ -78,6 +79,7 @@
     "react-native-webview": "^11.0.1",
     "react-navigation": "^4.4.2",
     "react-uuid": "^1.0.2",
+    "rn-fetch-blob": "^0.12.0",
     "subscriptions-transport-ws": "^0.9.18"
   },
   "devDependencies": {
