--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@react-native-firebase/app": "^10.2.0",
     "@react-native-firebase/crashlytics": "^10.4.0",
     "@react-native-firebase/messaging": "^10.2.0",
+    "@react-native-picker/picker": "^1.9.10",
     "@react-navigation/bottom-tabs": "^5.11.2",
     "@react-navigation/native": "^5.7.6",
     "@react-navigation/stack": "^5.9.3",
