--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "react-native-calendars": "^1.1129.0",
     "react-native-datepicker": "^1.7.2",
     "react-native-debugger": "^1.1.0",
+    "react-native-deep-linking": "^2.2.0",
     "react-native-device-info": "^6.2.1",
     "react-native-document-picker": "^4.2.0",
     "react-native-gesture-handler": "^1.6.1",
@@ -71,7 +72,6 @@
     "react-native-reanimated": "^1.9.0",
     "react-native-responsive-fontsize": "^0.4.3",
     "react-native-safe-area-context": "^3.1.8",
-    "react-native-scratch": "^1.2.1",
     "react-native-screens": "^2.9.0",
     "react-native-section-alphabet-list": "^1.0.1",
     "react-native-snap-carousel": "^3.9.1",
