--- a/ios/GuruQ/GuruQ.entitlements
+++ b/ios/GuruQ/GuruQ.entitlements
@@ -4,5 +4,12 @@
 <dict>
 	<key>aps-environment</key>
 	<string>development</string>
+	<key>com.apple.developer.associated-domains</key>
+	<array>
+		<string>applinks:guruq.in</string>
+		<string>webcredentials:*.guruq.in</string>
+		<string>applinks:*.guruq.in</string>
+		<string>webcredentials:guruq.in</string>
+	</array>
 </dict>
 </plist>
