--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -50,10 +50,10 @@
                 <action android:name="android.intent.action.VIEW" />
                 <category android:name="android.intent.category.DEFAULT" />
                 <category android:name="android.intent.category.BROWSABLE" />
-                <!-- Accepts URIs that begin with "http://guruq.in/app" -->
+                <!-- Accepts URIs that begin with "http://guruq.in/mobileapp" -->
                 <data android:scheme="https"
                       android:host="guruq.in"
-                      android:pathPrefix="/app" />
+                      android:pathPrefix="/mobileapp" />
                 <!-- note that the leading "/" is required for pathPrefix-->
             </intent-filter>
             <intent-filter>
