--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -23,7 +23,7 @@
 android.useAndroidX=true
 # Automatically convert third-party libraries to use AndroidX
 android.enableJetifier=true
-
+org.gradle.java.home=C:\\Program Files\\Java\\jdk-15.0.2
 # Version of flipper SDK to use with React Native
 FLIPPER_VERSION=0.37.0
 
