--- a/package.json
+++ b/package.json
@@ -8,10 +8,13 @@
     "start": "react-native start",
     "test": "jest",
     "lint": "eslint *.js **/*.js",
-    "clean-android": "cd android && ./gradlew clean && cd ../",
+    "clean:android": "cd android && ./gradlew clean && cd ../",
     "clean:ios": "cd ios && xcodebuild clean && cd ../",
     "clean-android-assets": "rm -rf ./android/app/src/main/res/drawable-*; rm -rf ./android/app/src/main/res/raw-*",
-    "postinstall": "patch-package"
+    "postinstall": "patch-package",
+    "release:android": "cd android ./gradlew clean && ./gradlew assembleRelease",
+    "release:ios": "yarn clean:ios && react-native run-ios --configuration=release",
+    "release": "yarn release:android && yarn release:ios"
   },
   "dependencies": {
     "@apollo/client": "^3.2.7",
@@ -78,7 +81,8 @@
     "react-native-snap-carousel": "^3.9.1",
     "react-native-splash-screen": "3.2.0",
     "react-native-swiper": "^1.6.0",
-    "react-native-webview": "^11.0.1",
+    "react-native-testfairy": "^2.51.0",
+    "react-native-webview": "^11.6.4",
     "react-navigation": "^4.4.2",
     "react-uuid": "^1.0.2",
     "rn-fetch-blob": "^0.12.0",
