--- a/package.json
+++ b/package.json
@@ -6,13 +6,14 @@
     "android": "react-native run-android",
     "ios": "react-native run-ios",
     "start": "react-native start",
+				"bundle:android":"react-native bundle --platform android --dev false --entry-file index.js --bundle-output android/app/src/main/assets/index.android.bundle",
     "test": "jest",
     "lint": "eslint *.js **/*.js",
     "clean:android": "cd android && ./gradlew clean && cd ../",
     "clean:ios": "cd ios && xcodebuild clean && cd ../",
     "clean-android-assets": "rm -rf ./android/app/src/main/res/drawable-*; rm -rf ./android/app/src/main/res/raw-*",
     "postinstall": "patch-package",
-    "release:android": "cd android && ./gradlew clean && ./gradlew assembleRelease",
+    "release:android": "yarn bundle:android && cd android && ./gradlew clean && ./gradlew assembleRelease",
     "release:ios": "yarn clean:ios && react-native run-ios --configuration=release",
     "release": "yarn release:android && yarn release:ios"
   },
